--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,6 @@ header figure {
 
 .panel {
   display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
   background-color: var(--color-modal);
   position: fixed;
   z-index: 998;
@@ -83,6 +81,22 @@ header figure {
   transform: translate(0, -100%);
 }
 
+.panel ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 100%;
+  list-style: none;
+  padding: inherit;
+  margin: 0;
+}
+
+.panel li {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+}
+
 .panel.is-active {
   transform: translate(0, 0);
 }
@@ -92,7 +106,6 @@ header figure {
   justify-content: center;
   flex-grow: 1;
   align-items: center;
-  width: inherit;
   font: var(--font-header-nav);
   font-weight: 300;
   color: white;
@@ -119,18 +132,25 @@ header figure {
   right: 1vw;
   width: 4rem;
   height: 4rem;
+  border: none;
   border-radius: 50%;
   padding: 0;
+  font-size: 2rem;
+  outline: none;
+  cursor: pointer;
   background-color: transparent;
+  color: white;
 }
 
-.menu-btn .hamburger-inner,
-.menu-btn .hamburger-inner::before,
-.menu-btn .hamburger-inner::after {
-  background-color: white;
+.menu-btn i.in-white {
+  color: white;
 }
 
-/* -----   head line   ------ */
+.none {
+  display: none;
+}
+
+/* -----   HEAD LINE   ------ */
 
 .hello .hello-h1 {
   display: none;
@@ -141,7 +161,7 @@ header figure {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: linear-gradient(90deg, rgba(14, 15, 66, 0.405) 35%, rgba(14, 15, 66, 0.45) 93%), url("assets/lou.jpg");
+  background: linear-gradient(90deg, rgba(14, 15, 66, 0.505) 35%, rgba(14, 15, 66, 0.499) 93%), url("assets/lou.jpg");
   background-size: cover;
   min-height: 100vh;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
@@ -177,6 +197,48 @@ header figure {
   margin: 0.9rem 1rem 4rem 1rem;
 }
 
+.pages-article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hello-card {
+  background-color: var(--color-terciary);
+  width: 100%;
+  height: 30vh;
+}
+
+.hello-card-avatar {
+  border: 1px solid black;
+}
+
+.hello-card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  margin-top: -5rem;
+  width: 100%;
+}
+
+.hello-card-hello {
+  display: flex;
+  flex-direction: column;
+}
+
+.hello-card-hello h1 {
+  text-align: center;
+  margin: 0;
+  font-size: 2.2rem;
+}
+
+.hello-card-hello p {
+  text-align: center;
+  margin: 0;
+  font-size: 1.3rem;
+}
+
 .avatar,
 .hello-card-avatar {
   order: 0;
@@ -206,7 +268,7 @@ header figure {
   font-weight: bold;
   cursor: pointer;
   width: 30%;
-  min-width: 170px;
+  min-width: 150px;
   color: var(--color-terciary);
   outline: 1px solid rgb(184, 184, 192);
   transition: all 0.3s ease;
@@ -223,27 +285,33 @@ header figure {
   color: white;
 }
 
-div.social {
+ul.social {
+  display: flex;
+  flex-direction: row;
   font-size: 1.8rem;
   margin-bottom: 1rem;
+  list-style: none;
 }
 
-.front-page div.social {
+.front-page ul.social {
   display: none;
 }
 
-.social a i {
+.social li a i {
   padding: 0 1rem 1rem 1rem;
   transition: all 0.3s ease;
 }
 
-a i.fa-twitter,
-a i.fa-twitter:active {
+a i.fa-twitter {
   color: #1da1f2;
 }
 
 a i.fa-twitter:hover {
   color: #657786;
+}
+
+a i.fa-twitter:active {
+  color: #1da1f2;
 }
 
 i.fa-linkedin {
